feat: add user field into login response
